--- a/main.css
+++ b/main.css
@@ -5,18 +5,20 @@
 }
 
 header h1,
-section h2 {
+section h2,
+section h3 {
     font-family: "Bungee", sans-serif;
+    font-weight: normal;
 }
 
-body {
+body, input, textarea {
     font-family: "Roboto", sans-serif;
 }
 
 header {
     padding: 16px 0;
     background-color:aquamarine
-    color: aliceblue;
+    color:aquamarine;
 }
 
 header h1,
@@ -31,7 +33,7 @@ header nav li {
 }
 
 header nav li a {
-    color: white;
+    color:blue;
     text-decoration: none;
 }
 
@@ -73,6 +75,60 @@ section p {
     height: 24px
 }
 
+.social-links li{
+    display:inline;
+    margin-right:8px;
+}
+
+.social-links li a{
+    text-decoration: none;
+}
+
+
 #contact .container{
     display:block;
+}
+
+.contact-methods{
+    display:flex;
+    justify-content: space-between;
+}
+
+form input,
+form textarea,
+form button {
+    display:block;
+    width: 320px;
+    margin-bottom: 8px;
+    padding: 8px;
+}
+
+form textarea{
+    resize: none;
+    height:180px;
+}
+
+section h3{
+    margin-bottom:16px;
+}
+
+form button{
+    background-color: aquamarine;
+    color: white;
+    border:none;
+    cursor:pointer;
+}
+
+form button:hover{
+    background-color:aquamarine;
+}
+
+input:focus, textarea:focus{
+    outline-color:darkblue ;
+}
+
+footer{
+    background-color: darkblue;
+    color:white;
+    padding:16px 0 ;
 }
